--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,7 @@
     "next.config.mjs"
   ],
   "extends": [
+    "next",
     "next/core-web-vitals",
     "prettier",
     "plugin:import/recommended",
@@ -43,6 +44,7 @@
     "import/no-anonymous-default-export": "off",
     "react/prop-types": "off",
     "react-hooks/rules-of-hooks": "error",
-    "react-hooks/exhaustive-deps": "warn"
+    "react-hooks/exhaustive-deps": "warn",
+    "no-unused-vars": ["warn", { "vars": "all", "args": "after-used", "ignoreRestSiblings": true }]
   }
 }
