--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint-plugin-unused-imports": "^3.2.0",
     "prisma": "^6.18.0",
     "tailwindcss": "^4",
-    "typescript": "5.9.3"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
   }
 }
