--- a/package.json
+++ b/package.json
@@ -3,17 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --port 3002",
     "build": "next build",
     "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.11.0",
     "@nestjs/common": "^11.1.7",
     "@prisma/client": "^6.18.0",
     "@tanstack/react-query": "^5.89.0",
     "@tanstack/react-query-devtools": "^5.89.0",
+    "auth": "^1.2.3",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
+    "better-auth": "^1.3.28",
     "next": "16.0.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
