--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,20 @@
 DATABASE_URL="mysql://*****"
+
+# better-auth
 BETTER_AUTH_SECRET="****"
 BETTER_AUTH_URL="http://localhost:3002"
+
+GITHUB_CLIENT_ID="***"
+GITHUB_CLIENT_SECRET="****"
+
+GOOGLE_CLIENT_ID=***
+GOOGLE_CLIENT_SECRET=****
+# better-auth
+
+
+
+# pages
 TERMS_PAGE="#"
 POLICIES_PAGE="#"
+# pages
+
