--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.0",
+    "@daveyplate/better-auth-ui": "^3.2.6",
     "@hookform/resolvers": "^5.2.2",
+    "@marsidev/react-turnstile": "^1.3.1",
     "@nestjs/common": "^11.1.7",
     "@prisma/client": "^6.18.0",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@tanstack/react-query": "^5.89.0",
@@ -24,13 +30,15 @@
     "better-auth": "^1.3.28",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "input-otp": "^1.4.2",
     "lucide-react": "^0.546.0",
     "next": "16.0.0",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.65.0",
-    "react-toastify": "^11.0.5",
+    "resend": "^6.2.2",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.4.0",
