--- a/.env.example
+++ b/.env.example
@@ -11,14 +11,16 @@ GOOGLE_CLIENT_ID=***
 GOOGLE_CLIENT_SECRET=****
 # better-auth
 
-
-
 # pages
 TERMS_PAGE="#"
 POLICIES_PAGE="#"
 # pages
 
-
 # resend
 RESEND_API_KEY=
 # resend
+
+
+# stripe
+STRIPE_SECRET_KEY=
+# stripe
