--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.0",
+    "@better-auth/stripe": "^1.3.32",
     "@daveyplate/better-auth-ui": "^3.2.6",
     "@hookform/resolvers": "^5.2.2",
     "@marsidev/react-turnstile": "^1.3.1",
@@ -42,6 +43,7 @@
     "react-hook-form": "^7.65.0",
     "resend": "^6.2.2",
     "sonner": "^2.0.7",
+    "stripe": "16.12.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.4.0",
