--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.4.0",
+    "uuid": "^13.0.0",
     "wavesurfer.js": "^7.11.0",
     "zod": "^4.1.12",
     "zustand": "^5.0.8"
