--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,7 @@ RESEND_API_KEY=
 # stripe
 STRIPE_SECRET_KEY=
 # stripe
+
+# slack
+SLACK_WEBHOOK_URL="https://hooks.slack.com/services/*****************"
+# slack
