--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,8 @@ RESEND_API_KEY=
 
 # stripe
 STRIPE_SECRET_KEY=
+STRIPE_PRODUCT_PRICE_ID_BASIC="****"
+STRIPE_PRODUCT_PRICE_ID_PREMIUM="*****"
 # stripe
 
 # slack
