MUDA PARA FUNCIONAR SE TIVER WEBHOOK

--- a/.env.example
+++ b/.env.example
@@ -28,5 +28,5 @@ STRIPE_PRODUCT_PRICE_ID_PREMIUM="*****"
 # stripe
 
 # slack
-SLACK_WEBHOOK_URL="https://hooks.slack.com/services/*****************"
+SLACK_WEBHOOK_URL=
 # slack
