ad feature sentry

--- a/.env.example
+++ b/.env.example
@@ -27,6 +27,6 @@ STRIPE_PRODUCT_PRICE_ID_BASIC="****"
 STRIPE_PRODUCT_PRICE_ID_PREMIUM="*****"
 # stripe
 
-# slack
-NEXT_PUBLIC_SLACK_WEBHOOK_URL=
-# slack
+# sentry
+NEXT_PUBLIC_SENTRY_DSN=
+# sentry
