--- a/.env.example
+++ b/.env.example
@@ -22,7 +22,7 @@ RESEND_API_KEY=
 
 
 # stripe
-STRIPE_SECRET_KEY=
+STRIPE_WEBHOOK_SECRET=
 STRIPE_PRODUCT_PRICE_ID_BASIC="****"
 STRIPE_PRODUCT_PRICE_ID_PREMIUM="*****"
 # stripe
