--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.0",
-    "@better-auth/stripe": "^1.3.32",
+    "@better-auth/stripe": "^1.3.34",
     "@daveyplate/better-auth-ui": "^3.2.6",
     "@hookform/resolvers": "^5.2.2",
     "@marsidev/react-turnstile": "^1.3.1",
@@ -26,11 +26,11 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@sentry/nextjs": "^8.38.0",
     "@tabler/icons-react": "^3.35.0",
     "@tanstack/react-query": "^5.89.0",
     "@tanstack/react-query-devtools": "^5.89.0",
     "auth": "^1.2.3",
-    "@sentry/nextjs": "^8.38.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "better-auth": "^1.3.28",
@@ -45,7 +45,7 @@
     "react-hook-form": "^7.65.0",
     "resend": "^6.2.2",
     "sonner": "^2.0.7",
-    "stripe": "16.12.0",
+    "stripe": "^19.1.0",
     "tabler": "^1.0.0-alpha.8",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
