--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "@auth/prisma-adapter": "^2.11.0",
     "@better-auth/stripe": "^1.3.34",
     "@daveyplate/better-auth-ui": "^3.2.6",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/modifiers": "^9.0.0",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^5.2.2",
     "@marsidev/react-turnstile": "^1.3.1",
     "@nestjs/common": "^11.1.7",
@@ -25,25 +29,31 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@sentry/nextjs": "^8.38.0",
     "@tabler/icons-react": "^3.35.0",
     "@tanstack/react-query": "^5.89.0",
     "@tanstack/react-query-devtools": "^5.89.0",
+    "@tanstack/react-table": "^8.21.3",
+    "add": "^2.0.6",
     "auth": "^1.2.3",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "better-auth": "^1.3.28",
+    "checkbox": "^0.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "input-otp": "^1.4.2",
-    "lucide-react": "^0.548.0",
+    "lucide-react": "^0.552.0",
     "next": "16.0.0",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.65.0",
+    "recharts": "2.15.4",
     "resend": "^6.2.2",
+    "shadcn": "^3.5.0",
     "sonner": "^2.0.7",
     "stripe": "^19.1.0",
     "tabler": "^1.0.0-alpha.8",
@@ -51,6 +61,7 @@
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.4.0",
     "uuid": "^13.0.0",
+    "vaul": "^1.1.2",
     "wavesurfer.js": "^7.11.0",
     "zod": "^4.1.12",
     "zustand": "^5.0.8"
