--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
     "dev": "next dev --port 3002",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "db:generate": "npx prisma generate",
+    "db:reset": "npx prisma migrate reset",
+    "db:migrate": "npx prisma migrate",
+    "db:studio": "npx prisma studio",
+    "db:deploy": "npx prisma deploy",
+    "db:push": "npx prisma db push"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.0",
